--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,23 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>bintray-tastybento-maven-repo</id>
+            <name>bintray</name>
+            <url>http://dl.bintray.com/tastybento/maven-repo</url>
+        </repository>
+
+    </repositories>
+
     <dependencies>
+
+        <dependency>
+            <groupId>com.wasteofplastic</groupId>
+            <artifactId>askyblock</artifactId>
+            <version>3.0.8.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
@@ -68,21 +84,6 @@
             <version>1.14.2</version>
             <systemPath>${project.basedir}/lib/1.14.2.jar</systemPath>
         </dependency>
-
-        <dependency>
-            <groupId>com.sk89q.worldguard.</groupId>
-            <artifactId>worldguard-legacy</artifactId>
-            <version>7.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sk89q.worldguard</groupId>
-            <artifactId>worldguard-core</artifactId>
-            <version>7.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
 
     </dependencies>
 
