--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <outputDirectory>C:\Users\pengy\Desktop\Minecraft Server\plugins</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -67,20 +76,6 @@
             <scope>system</scope>
             <version>1.14.2</version>
             <systemPath>${project.basedir}/lib/1.14.2.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sk89q.worldguard.</groupId>
-            <artifactId>worldguard-legacy</artifactId>
-            <version>7.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sk89q.worldguard</groupId>
-            <artifactId>worldguard-core</artifactId>
-            <version>7.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
 
 
