Updated maven and added CommandEdit

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,7 @@ disabled-worlds:
   - "world_nether"
 
 generator-menu:
+  title: '&7Modify percentages'
   item-name: '&c%material%'
   item-lore:
     - '&7Modify the generators percent'
